# deepagents

./: .env.example  .gitignore  CLAUDE.md  CONTEXT_REFACTOR_PR_DESCRIPTION.md  MCP_INTEGRATION.md  PLANNING_APPROVAL.md  PROJECT_INDEX.json  prompt_improvements_analysis.md  pyproject.toml
examples/atlas/: .env.example  README.md  atlas_agent.py  demo_planning_approval.py  langgraph.json  pyproject.toml  requirements.txt  test_planning_workflow.py
examples/deep_planning/: .gitignore  CLAUDE.md  CONFIG_GUIDE.md  README.md  README_LLM_COMPRESSION.md  REFACTORING_PLAN.md  agent_core.py  compact_integration.py  compatibility_layer.py  config_loader.py  context_config.yaml  context_hooks.py  context_manager.py  debug_tools.py  deep_planning_agent.py  dynamic_agent_factory.py  enhanced_compact_integration.py  integration_example.py  langgraph.json  legacy_prompts.py  llm_compression.py  mcp_cleaners.py  mcp_integration.py  mcp_wrapper.py  model_compatibility.py  monitor_logs.sh  optimized_prompts.py  performance_optimizer.py  phase_orchestration.py  pyproject.toml  requirements.txt  setup.py  simplified_agent_factory.py  test_compatibility.py  test_compression_fix.py  test_compression_logging.py  test_config_integration.py  test_context_manager.py  test_dynamic_system.py  test_enhanced_logging.py  (+11 more)
examples/deep_planning/archive/: compression_node.py  deep_planning_agent.py  dynamic_agent_factory.py  enhanced_compact_integration_backup.py  graph_with_compression.py  optimized_llm_compressor.py
examples/deep_planning/config/: context_config.yaml  langgraph.json
examples/deep_planning/docs/: AGENT_MODIFICATION_GUIDE.md  ENHANCED_LOGGING.md  MODIFICATION_EXAMPLES.md  README_LLM_COMPRESSION.md  code_quality_review_report.md
examples/deep_planning/examples/: enhanced_agent_example.py
examples/deep_planning/src/: __init__.py
examples/deep_planning/src/compatibility/: unified_wrapper.py
examples/deep_planning/src/config/: config_loader.py  prompt_config.py  prompt_templates.py  unified_config.py
examples/deep_planning/src/context/: archiving_tools.py  compact_integration.py  compression_hooks.py  context_compression.py  context_hooks.py  context_manager.py  http_interceptor.py  llm_compression.py  selective_compression.py  token_tracking_hooks.py
examples/deep_planning/src/core/: agent_core.py  agent_factory.py  debug_agent_core.py  enhanced_agent_factory.py  phase_orchestration.py
examples/deep_planning/src/prompts/: smart_archiving_prompts.py
examples/deep_planning/src/utils/: debug_tools.py  logging_setup.py  validation_chains.py
examples/deep_planning/tests/: test_all_tools.py  test_compatibility.py  test_create_agent.py  test_dynamic_system.py  test_hook_integration.py  test_logging.py  test_phase4_integrations.py  test_selective_compression.py
(+17 files in other folders)
